assets/css/main.css
@font-face {
    font-family: "Nexa";
    src: url("../fonts/NexaLight.otf");
    font-weight: lighter;
}

@font-face {
    font-family: "Nexa";
    src: url("../fonts/NexaBold.otf");
    font-weight: bold;
}

@font-face {
    font-family: "CastleBegale";
    src: url("../fonts/CastleBegale.ttf");
}

html{
    font-family: "Nexa";
    font-weight: lighter;
}

body{
    margin:0;
}

.container{
    max-width: 300px;
    margin: 0 auto;
}

.centeredcont{
    /* Center vertically and horizontally */
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 100%;
}

.centeredmodal{
    /* Center vertically and horizontally */
    position: absolute;
    top: 58vh;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 100%;
}

.mainroundimg{
    width: 100%;
    border-radius: 50%;
    margin: 0 auto;
}

.flex{
    display: flex;
}

h1{
    font-family: "CastleBegale";
    font-size: 40px;
    text-align: center;
    margin:0;
}

.h1b{
    font-family: "CastleBegale";
    font-size: 40px;
    text-align: center;
    margin:0;
}

h2{
    font-family: "CastleBegale";
    font-size: 30px;
    margin:0;
}

p{
    margin:0;
}

.mainbutton{
    padding: 10px 15px 5px 15px;
    background-color: #22223B;
    border-radius: 50px;
    border: 1px solid #22223B;
    color: white;
    font-family: "Nexa";
    font-weight: bold;
    font-size: 30px;
    text-decoration: none;
    text-align: center;

    transition: 0.3s;
}

.mainbutton:hover{
    padding: 10px 15px 5px 15px;
    background-color: white;
    border-radius: 50px;
    border: 1px solid #22223B;
    color: #22223B;
    font-family: "Nexa";
    font-weight: bold;
    font-size: 30px;
    text-decoration: none;
    text-align: center;

    transition: 0.3s;
}

.button{
    padding: 10px 15px 5px 15px;
    background-color: #4A4E69;
    border-radius: 50px;
    color: white;
    font-family: "Nexa";
    font-weight: bold;
    font-size: 20px;
    text-decoration: none;
    text-align: center;

    transition: 0.3s;
}

.button-list{
    display: flex;
    flex-direction: column;
    width: fit-content;
    align-items: center;
    width: 100%;
    margin: 50px 0px;
}

.button-list a+a{
    margin-top: 10px;
}

.acccont img{
    display: block;
    margin: auto;
}

.center{
    text-align: center;
}

.mt70{
    margin-top:70px;
}

.mtb70{
    margin:70px auto;
}

.input{
    border: #22223B 1px solid;
    border-radius: 50px;
    padding: 10px 15px 5px 15px;
    width: 25%;
}

#partitioned {
    padding-left: 21px;
    letter-spacing: 29px;
    border: 0;
    font-size: 61px;
    background-image: linear-gradient(to left, black 68%, rgba(255, 255, 255, 0) 0%);
    background-position: bottom;
    background-size: 71px 1px;
    background-repeat: repeat-x;
    background-position-x: 65px;
    width: 100%;
    min-width: 220px;
  }
  
  #divInner{
    left: 0;
    position: sticky;
  }
  
  #divOuter{
    width: 100%;
    overflow: hidden;

    margin-top: 30px;
  }

  textarea:focus, input:focus{
    outline: none;
}














/* Bootsrap MODIFY */

.panel-group .panel {
    margin-bottom: 0;
    border-radius: 30px 30px 30px 0px;
}

.panel-group {
    margin: 30px 0px;
}

.panel-default > .panel-heading {
    color: #fff;
    background-color: #4A4E69;
    border-color: #4A4E69;
    border-radius: 0px 30px 30px 0px;
}

.panel-group {
    margin-bottom: 50px;
    font-family: "Nexa";
}

.panel-group .panel-heading + .panel-collapse > .panel-body, .panel-group .panel-heading + .panel-collapse > .list-group {
    border-top: 0px solid #dddddd;
}

a:hover, a:focus {
    text-decoration: none;
}

.panel-title a {
    text-decoration: none;
}

.panel-heading {
    padding: 15px 15px 10px 15px;
}

.panel-title{
    font-family: "CastleBegale";
}

